fixed blog menu from going past the screen resolution on mobile, added links to my projects in about me section, fixed grey bar isue in blog main menu, changed image formatting for blog posts on mobile to be less 'stretched' on mobile

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -28,7 +28,7 @@ header {
 nav {
     background-color: #f4f4f4;
     padding: 10px;
-    width: 440px;
+    width: 85vw;
     height: 100vh;
     overflow-y: auto;
     position: fixed;
@@ -160,7 +160,7 @@ code {
     .post1format {
         width: 100vw;
         max-width: 646px;
-        height: 45vh;
+        height: 39vh;
     }
 
 }
